[tool.poetry]
name = "bmauto"
version = "0.1.0"
description = "An API tool that returns a price suggestion of a given product based on the Mercado Livre platform."
authors = ["wenzorithelly <rithellyenzo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
tox = "^4.6.4"
pandas = "^2.0.3"
flask = "^2.3.2"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
